plugins {
    id 'java-library'
    id 'jacoco'
    id 'jacoco-report-aggregation'
    id 'com.vanniktech.maven.publish' version '0.36.0'
}

project.group = 'io.github.pmalirz'

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    jacocoAggregation project(':dlock-core')
    jacocoAggregation project(':dlock-jdbc')
    jacocoAggregation project(':dlock-spring')
}

reporting {
    reports {
        testCodeCoverageReport(JacocoCoverageReport) {
        }
    }
}

tasks.named('check') {
    dependsOn tasks.named('testCodeCoverageReport', JacocoReport)
}

subprojects {

    apply plugin: "java-library"
    apply plugin: "groovy"
    apply plugin: "jacoco"
    apply plugin: "com.vanniktech.maven.publish"

    project.group = 'io.github.pmalirz'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    dependencies {
        testImplementation "org.apache.groovy:groovy-all:4.0.24"
        testImplementation "org.spockframework:spock-core:2.4-groovy-4.0"
        testImplementation "org.junit.jupiter:junit-jupiter-api:5.12.1"
        testImplementation "net.bytebuddy:byte-buddy:1.17.5"
        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.12.1"
    }

    repositories {
        mavenLocal()
        mavenCentral()
    }

    jacoco {
        toolVersion = "0.8.12"
    }

    jacocoTestReport {
        reports {
            xml.required = true
            html.outputLocation = layout.buildDirectory.dir("jacoco-html")
        }
    }

    jacocoTestCoverageVerification {
        violationRules {
            rule {
                element = 'CLASS'
                limit {
                    counter = 'LINE'
                    value = 'COVEREDRATIO'
                    minimum = 0.8
                }
                includes = ["$project.group.*"]
            }

            rule {
                element = 'METHOD'
                limit {
                    counter = 'LINE'
                    value = 'TOTALCOUNT'
                    maximum = 25
                }
                includes = ["$project.group.*"]
            }

            rule {
                element = 'METHOD'
                limit {
                    counter = 'BRANCH'
                    value = 'TOTALCOUNT'
                    maximum = 4
                }
                includes = ["$project.group.*"]
            }

        }
    }

    jar {
        manifest {
            attributes(
                    "Name": "${project.group} - ${project.name}",
                    "Implementation-Title": project.name,
                    "Implementation-Version": project.version,
                    "Implementation-Vendor": "Przemyslaw Malirz")
        }
    }

    mavenPublishing {
        coordinates(project.group.toString(), project.name, project.version.toString())
        pom {
            name = "DLock - ${project.name}"
            description = "Distributed, repository-based lock for Java"
            inceptionYear = "2023"
            url = "https://github.com/pmalirz/dlock"
            licenses {
                license {
                    name = "The MIT License"
                    url = "https://opensource.org/licenses/MIT"
                }
            }
            developers {
                developer {
                    id = "pmalirz"
                    name = "Przemyslaw Malirz"
                    url = "https://github.com/pmalirz/"
                }
            }
            scm {
                url = "https://github.com/pmalirz/dlock"
                connection = "scm:git:git://github.com/pmalirz/dlock.git"
                developerConnection = "scm:git:ssh://git@github.com/pmalirz/dlock.git"
            }
        }
        
        // Publish to the new Sonatype Central Portal
        publishToMavenCentral()
        // Enable GPG signing
        signAllPublications()
    }

}
